Change model name from 'Llama 3.3' to 'Qwen 3 235B'

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <header class="hidden md:flex items-center p-3 text-gray-200 absolute top-0 left-0 right-0 z-10">
             <div class="relative mx-auto">
                 <button onclick="toggleDropdown('desktop')" class="flex items-center gap-1 bg-transparent hover:bg-gpt-input px-3 py-1.5 rounded-xl transition-colors group" id="desktop-model-btn">
-                    <span class="font-semibold text-lg opacity-90 model-name-display">Llama 3.3</span>
+                    <span class="font-semibold text-lg opacity-90 model-name-display">Qwen 3 235B</span>
                     <i class="ph ph-caret-down text-gray-500 mt-0.5 group-hover:text-gray-300 transition-colors"></i>
                 </button>
 
