Add Zai Glm 4.7 to the available models list

--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
         // Updated Model List with SumoAiGenerator
         const AVAILABLE_MODELS = [
             { id: 'qwen-3-235b-a22b-instruct-2507', name: 'Qwen 3 235B', description: 'Heavy duty instructions' },
-            { id: 'sumo-ai-gen', name: 'SumoImageGenerator', description: 'Image generator' }
+            { id: 'sumo-ai-gen', name: 'SumoImageGenerator', description: 'Image generator' },
+            { id: 'zai-glm-4.7', name: 'Zai Glm 4.7', description: 'better than qwen 3 235B Known with its crazy performance' }
         ];
 
         let currentModelId = AVAILABLE_MODELS[0].id;
