Update SYSTEM_PROMPT_BASIC with completion reminder

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         });
 
         // STANDARD SYSTEM PROMPT (For Qwen/General)
-        const SYSTEM_PROMPT_BASIC = " ";
+        const SYSTEM_PROMPT_BASIC = "when you are coding make sure that you finish the code and not leave it unfinished, you will get penalties if you wont finish the script you generated";
 
         // CHAIN OF THOUGHT SYSTEM PROMPT (For others)
         const SYSTEM_PROMPT_THINKING = ` 
