--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         });
 
         // STANDARD SYSTEM PROMPT (For Qwen/General)
-        const SYSTEM_PROMPT_BASIC = "when you are coding make sure that you finish the code and not leave it unfinished, you will get penalties if you wont finish the script you generated";
+        const SYSTEM_PROMPT_BASIC = "when you are coding make sure that you finish the code and not leave it unfinished, you will get penalties if you wont finish the script you generated and make sure the script you are generating works well and isnt glitched";
 
         // CHAIN OF THOUGHT SYSTEM PROMPT (For others)
         const SYSTEM_PROMPT_THINKING = ` 
