--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
         const AVAILABLE_MODELS = [
             { id: 'qwen-3-235b-a22b-instruct-2507', name: 'Qwen 3 235B', description: 'Heavy duty instructions' },
             { id: 'sumo-ai-gen', name: 'SumoImageGenerator', description: 'Image generator' },
-            { id: 'zai-glm-4.7', name: 'Zai Glm 4.7', description: 'better than qwen 3 235B Known with its crazy performance' }
+            { id: 'zai-glm-4.7', name: 'Zai Glm 4.7', description: 'better than qwen 3 235B Known with its crazy performance' },
+            { id: 'llama-3.3-70b', name: 'Llama 3.3 70B Thinking', description: 'Llama 3.3 70b With reasoning making it smarter' }
         ];
 
         let currentModelId = AVAILABLE_MODELS[0].id;
