--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         const SYSTEM_PROMPT_BASIC = "when you are coding make sure that you finish the code and not leave it unfinished, you will get penalties if you wont finish the script you generated and make sure the script you are generating works well and isnt glitched and make sure you generate the code and not give something gibberish";
 
         // CHAIN OF THOUGHT SYSTEM PROMPT (For others)
-        const SYSTEM_PROMPT_THINKING = "when you are coding make sure that you finish the code and not leave it unfinished, you will get penalties if you wont finish the script you generated and make sure the script you are generating works well and isnt glitched and make sure you generate the code and not give something gibberish" 
+        const SYSTEM_PROMPT_THINKING = `
 
 CRITICAL INSTRUCTION:
 To provide the highest quality answer, you MUST engage in a "Chain of Thought" reasoning process before answering.
