Update model descriptions and output brevity guideline

--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
             { id: 'qwen-3-235b-a22b-instruct-2507', name: 'Qwen 3 235B', description: 'Heavy duty instructions' },
             { id: 'sumo-ai-gen', name: 'SumoImageGenerator', description: 'Image generator' },
             { id: 'zai-glm-4.7', name: 'Zai Glm 4.7', description: 'better than qwen 3 235B Known with its crazy performance' },
-            { id: 'llama-3.3-70b', name: 'Llama 3.3 70B Thinking', description: 'Llama 3.3 70b With reasoning making it smarter' }
+            { id: 'llama-3.3-70b', name: 'Llama 3.3 70B Thinking', description: 'Good for fast Thinking messages' },
+            { id: 'gpt-oss-120b', name: 'Gpt Oss 120b Thinking', description: 'Gpt Ai For everything With Thinking' }
         ];
 
         let currentModelId = AVAILABLE_MODELS[0].id;
@@ -266,7 +267,7 @@ FORMATTING RULES:
     -   **Critique**: Check for errors/edge cases.
     -   **Refine**: Update plan.
 3.  **Final Output**: After closing </think>, provide the polished answer. 
-4.  **Brevity**: Unless requested otherwise, keep the FINAL answer concise.
+4.  **Brevity**: keep the FINAL answer good.
 
 Output Structure:
 <think>
