Update model descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
 
         // Updated Model List with SumoAiGenerator
         const AVAILABLE_MODELS = [
-            { id: 'qwen-3-235b-a22b-instruct-2507', name: 'Qwen 3 235B', description: 'Heavy duty instructions' },
+            { id: 'qwen-3-235b-a22b-instruct-2507', name: 'Qwen 3 235B', description: 'Heavy Duty Instructions' },
             { id: 'sumo-ai-gen', name: 'SumoImageGenerator', description: 'Image generator' },
-            { id: 'zai-glm-4.7', name: 'Zai Glm 4.7', description: 'better than qwen 3 235B Known with its crazy performance' },
-            { id: 'llama-3.3-70b', name: 'Llama 3.3 70B Thinking', description: 'Good for fast Thinking messages' },
-            { id: 'gpt-oss-120b', name: 'Gpt Oss 120b Thinking', description: 'Gpt Ai For everything With Thinking' }
+            { id: 'zai-glm-4.7', name: 'Zai Glm 4.7', description: 'Better Than Qwen.3.235B Known With Its Crazy Performance' },
+            { id: 'llama-3.3-70b', name: 'Llama 3.3 70B Thinking', description: 'Good For Fast Thinking Messages' },
+            { id: 'gpt-oss-120b', name: 'Gpt Oss 120b Thinking', description: 'By OpenAi For Everything With Reasoning' }
         ];
 
         let currentModelId = AVAILABLE_MODELS[0].id;
