--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         });
 
         // STANDARD SYSTEM PROMPT (For Qwen/General)
-        const SYSTEM_PROMPT_BASIC = "when you are coding make sure that you finish the code and not leave it unfinished, you will get penalties if you wont finish the script you generated and make sure the script you are generating works well and isnt glitched and make sure you generate the code and not give something gibberish";
+        const SYSTEM_PROMPT_BASIC = "if coding make sure you finish code and not leave it unfinished, you will get penalties if you wont finish script";
 
         // CHAIN OF THOUGHT SYSTEM PROMPT (For others)
         const SYSTEM_PROMPT_THINKING = `
