--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@ To provide the highest quality answer, you MUST engage in a "Chain of Thought" r
 Your Goal: Use the thinking block to actually SOLVE the problem, catch errors, and refine your approach before presenting the final result.
 
 FORMATTING RULES:
-1.  **Start Immediately**: Begin your response with <think>. No introductory text (e.g. "Sure!", "Thinking about it...").
-2.  **Thinking Process**: Inside <think>...</think>, you must:
+1.  **Start Immediately**: Begin response with <think>. No introductory text.
+2.  **Thinking Process**: make a simulated thinking process and the simulated thinking text should be in between <think> </think>:
     -   **Analyze**: Break down requirements.
     -   **Plan**: Outline steps.
     -   **Critique**: Check for errors/edge cases.
