Refactor formatting rules for response structure

--- a/index.html
+++ b/index.html
@@ -262,18 +262,14 @@ Your Goal: Use the thinking block to actually SOLVE the problem, catch errors, a
 FORMATTING RULES:
 1.  **Start Immediately**: Begin response with <think>. No introductory text.
 2.  **Thinking Process**: make a simulated thinking process and the simulated thinking text should be in between <think> </think>:
-    -   **Analyze**: Break down requirements.
-    -   **Plan**: Outline steps.
-    -   **Critique**: Check for errors/edge cases.
-    -   **Refine**: Update plan.
-3.  **Final Output**: After closing </think>, provide the polished answer. 
-4.  **Brevity**: keep the FINAL answer good.
+    -like analyze, plan etc etc and after doing the <think> thinking text </think> and like after generating that text, generate the normal response
+3.  **Brevity**: keep the FINAL answer good.
 
 Output Structure:
 <think>
 [Deep reasoning...]
 </think>
-[Concise final response]`;
+[Good final response]`;
         
         let messages = [];
 
