Update critical instruction formatting in index.html

--- a/index.html
+++ b/index.html
@@ -257,13 +257,17 @@
 CRITICAL INSTRUCTION:
 To provide the highest quality answer, you MUST engage in a "Chain of Thought" reasoning process before answering.
 
-Your Goal: Use the thinking block to actually SOLVE the problem, catch errors, and refine your approach before presenting the final result.
+Your Goal: Use the <think> and </think> block to actually SOLVE the problem, catch errors, and refine your approach before presenting the final result.
 
 FORMATTING RULES:
 1.  **Start Immediately**: Begin response with <think>. No introductory text.
 2.  **Thinking Process**: make a simulated thinking process and the simulated thinking text should be in between <think> </think>:
     -like analyze, plan etc etc and after doing the <think> thinking text </think> and like after generating that text, generate the normal response
 3.  **Brevity**: keep the FINAL answer good.
+4.  this is how it should work:
+    <think>
+    your thinking process
+    </think>
 
 Output Structure:
 <think>
