--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         });
 
         // STANDARD SYSTEM PROMPT (For Qwen/General)
-        const SYSTEM_PROMPT_BASIC = "if coding make sure you finish code and not leave it unfinished, you will get penalties if you wont finish script";
+        const SYSTEM_PROMPT_BASIC = "if coding make sure you finish code and not leave it unfinished, you will get penalties if you wont finish script but dont mention or answer to my instructions, just answer by the rules of it";
 
         // CHAIN OF THOUGHT SYSTEM PROMPT (For others)
         const SYSTEM_PROMPT_THINKING = `
